# hackathon-todo

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml  speckit.plan  speckit.specify  speckit.tasks
backend/: CLAUDE.md  pytest.ini  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: task.py  user.py
backend/app/schemas/: user.py
backend/tests/: __init__.py  test_db.py  test_main.py
backend/tests/api/: test_auth.py
backend/tests/unit/: test_security.py
frontend/: CLAUDE.md  package-lock.json  package.json
frontend/lib/: auth.ts
spec-kit/: config.yaml
spec-kit/specs/api/: rest-endpoints.md
spec-kit/specs/database/: schema.md
spec-kit/specs/features/: authentication.md  task-crud.md
src/: __init__.py  todo_app.py
tests/: __init__.py  test_todo_app.py
